--- a/maj.yml
+++ b/maj.yml
@@ -5,15 +5,21 @@
 
   tasks:
   - name: "Update all debian"
-    command: sudo apt update && sudo apt upgrade -y
+    apt:
+      name: "*"
+      state: latest
     when: ansible_facts['os_family'] == "Debian"
 
   tasks:
   - name: "Update all ubuntu"
-    command: sudo apt update && sudo apt upgrade -y
+    apt:
+      name: "*"
+      state: latest
     when: ansible_facts['os_family'] == "Ubuntu"
 
-  tasks:
-  - name: "Update all Centos"
-    command: sudo yum update && sudo yum upgrade -y
-    when: ansible_facts['os_family'] == "Centos"
+
+#  tasks:
+#  - name: "Update all Centos"
+#    command: sudo yum update && sudo yum upgrade -y
+#    when: ansible_facts['os_family'] == "Centos"
+    
