Force user throught proxy (modif)

--- a/ForceProxyFreshClam.yml
+++ b/ForceProxyFreshClam.yml
@@ -6,5 +6,9 @@
   tasks:
   - name: "Force proxy Freshclam"
     shell: echo "HTTPProxyServer 10.10.240.10" >> /etc/clamav/freshclam.conf
-    shell: echo "HTTPProxyPort 3128" >> /etc/clamav/freshclam.conf
     become: yes    
+    
+  tasks:
+  - name: "Force port Freshclam"
+    shell: echo "HTTPProxyPort 3128" >> /etc/clamav/freshclam.conf
+    become: yes  
