--- a/ForceProxyFreshClam.yml
+++ b/ForceProxyFreshClam.yml
@@ -8,12 +8,12 @@
   #  shell: sed -i '$d' /etc/clamav/freshclam.conf
   #  become: yes 
 
-  tasks:
-  - name: "Force proxy Freshclam"
-    shell: echo "HTTPProxyServer 10.10.240.10" >> /etc/clamav/freshclam.conf
-    become: yes    
-    
   #tasks:
-  #- name: "Force port Freshclam"
-  #  shell: echo "HTTPProxyPort 3128" >> /etc/clamav/freshclam.conf
-  #  become: yes  
+  #- name: "Force proxy Freshclam"
+  #  shell: echo "HTTPProxyServer 10.10.240.10" >> /etc/clamav/freshclam.conf
+  #  become: yes    
+    
+   tasks:
+   - name: "Force port Freshclam"
+     shell: echo "HTTPProxyPort 3128" >> /etc/clamav/freshclam.conf
+     become: yes  
