--- a/ScanALL.yml
+++ b/ScanALL.yml
@@ -5,7 +5,7 @@
 
   tasks:
   - name: "Scan ALL the disk"
-    shell: clamscan -i -r /etc --exclude-dir="^/sys" --log=/var/log/clamav/scan.log
+    shell: clamscan -i -r / --exclude-dir="^/sys" --log=/var/log/clamav/scan.log
     become: yes 
 
 
