--- a/Chkrootkit.yml
+++ b/Chkrootkit.yml
@@ -5,5 +5,10 @@
 
   tasks:
   - name: "Launch chkrootkit"
-    shell: chkrootkit -q
+    shell: chkrootkit -q > /var/log/scan.log
+    become: yes 
+
+  tasks:
+  - name: "Show scan result"
+    shell: cat /var/log/scan.log
     become: yes 
